alignment fix

--- a/client/components/recipes/styles/IngredientListItem.scss
+++ b/client/components/recipes/styles/IngredientListItem.scss
@@ -7,6 +7,10 @@
   display: table;
   width: 100%;
 
+  label {
+    margin-right: 10px;
+  }
+
 
   &Editing {
     div {
