--- a/client/components/recipes/styles/ShowRecipe.scss
+++ b/client/components/recipes/styles/ShowRecipe.scss
@@ -81,11 +81,11 @@
 
 .showRecipeButtons {
   button {
-    background-color: $otherdark;
+    background-color: $green;
     color: $white;
-    padding: 10px;
+    padding: .5rem 1rem;
     border-radius: 10px;
-    font-size: 1rem;
+    font-size: 1.5rem;
 
     * {
       vertical-align: middle;
